--- a/translations/smmg_coupon-1.0.0.de.po
+++ b/translations/smmg_coupon-1.0.0.de.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2019-01-05 15:36+0100\n"
-"PO-Revision-Date: 2019-01-05 15:45+0100\n"
+"PO-Revision-Date: 2019-01-05 23:52+0100\n"
 "Last-Translator: Oliver Steiner <oliver@mollo.ch>\n"
 "Language-Team: \n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2\n"
 "X-Poedit-Basepath: ..\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-KeywordsList: t\n"
@@ -51,7 +51,7 @@ msgstr "Bitte wählen"
 
 #: src/Form/CouponForm.php:254 src/Form/CouponForm.php:425
 msgid "Gender"
-msgstr "Titel"
+msgstr "Anrede"
 
 #: src/Form/CouponForm.php:265 src/Form/CouponForm.php:433
 msgid "First Name"
