Add automatic Title

--- a/translations/smmg_coupon-1.0.0.de.po
+++ b/translations/smmg_coupon-1.0.0.de.po
@@ -108,7 +108,7 @@ msgid "General"
 msgstr "Allgemein"
 
 #: src/Form/CouponSettingsForm.php:80
-msgid "Currency (USD, EUR, SFr)"
+msgid "suffix (USD, EUR, SFr)"
 msgstr "Währung (USD, EUR, SFr)"
 
 #: src/Form/CouponSettingsForm.php:87
